installed and configured celery

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ POSTGRES_USER=database_user
 POSTGRES_PASSWORD=database_password
 DB_HOST=localhost
 DB_PORT=5432
+
+CELERY_BROKER_URL=redis://localhost:6379/0
