--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ django = "4.1"
 djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.7"
+celery = "^5.3.1"
+redis = "^4.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
