added celery tasks for email sending

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -13,3 +13,8 @@ services:
       - .env
     ports:
       - "${DB_PORT}:5432"
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
