created prod-like docker-compose, Dockerfile, nginx config

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 DJANGO_SECRET_KEY=super_secet_key123
-DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
-
+DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,backend:8000
+DJANGO_DEBUG=true
 
 POSTGRES_DB=database_name
 POSTGRES_USER=database_user
 POSTGRES_PASSWORD=database_password
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
 
-CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
 
 SEND_EMAILS_HOUR=8
 SEND_EMAILS_MINUTE=30
