--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.7"
 celery = "^5.3.1"
 redis = "^4.6.0"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
