--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.7"
 celery = "^5.3.1"
 redis = "^4.6.0"
 gunicorn = "^21.2.0"
+drf-spectacular = "^0.26.4"
 
 
 [tool.poetry.group.dev.dependencies]
